--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>github</title>
 
+    <!--bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
+    <!-- jQuery and JS bundle w/ Popper.js -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -21,15 +23,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap" rel="stylesheet">
 
     <style>
-        a {
-            color: white;
-        }
-
-        nav {
-            height: 75px;
-
-        }
-
         h5 {
             font-family: 'Roboto Mono', monospace;
             font-size: 15px;
@@ -43,84 +36,87 @@
 </head>
 
 <body>
-    <nav class="navbar fixed-top navbar-expand-lg bg-dark ">
-        <a class="navbar-brand" href="#">
-            <img src="githublogo.png" alt="" style="height: 30px; width: 30px;">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    
+        <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">
+                <img src="githublogo.png" alt="" style="height: 30px; width: 30px;">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
 
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Why github?<span
-                            class="sr-only">(current)</span></a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: white;">
+                            Why github?
+                            <span class="sr-only">(current)</span></a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                    </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Team</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" style="color: white;">Team</a>
+                    </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Enterprise</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" style="color: white;">Enterprise</a>
+                    </li>
 
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Explore
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: white;">
+                            Explore
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                    </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Marketinplace</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" style="color: white;">Marketinplace</a>
+                    </li>
 
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        pricing
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: white;">
+                            pricing
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                    </li>
 
-            </ul>
+                </ul>
 
-            <ul class="navbar-nav ml-auto">
-                <form class="form-inline my-2 my-lg-0" style="margin-right: 45px;">
-                    <input class="form-control mr-sm-2 bg-dark" type="search"  
-                        placeholder="Search github" aria-label="Search">
+                <ul class="navbar-nav ml-auto">
+                    <form class="form-inline my-2 my-lg-0" style="margin-right: 45px;">
+                        <input class="form-control mr-sm-2 bg-dark" type="search" placeholder="Search github"
+                            aria-label="Search">
 
-                </form>
+                    </form>
 
-                <li class="nav-item" style="margin-right: 10px;">
-                    <a class="nav-link" href="#">sign in</a>
-                </li>
+                    <li class="nav-item" style="margin-right: 10px;">
+                        <a class="nav-link" href="#" style="color: white;">sign in</a>
+                    </li>
 
-            </ul>
-        </div>
-    </nav>
+                </ul>
+            </div>
+        </nav>
+    
 
     <!--end of navbar-->
 
@@ -151,7 +147,7 @@
                 <label for="" style="margin-bottom: 5px; font-size: 15px">
                     <b> Username</b> <label for="" style="color: red;">*</label>
                 </label>
-                <input type="text" class="form-control" style="height: 30px; margin-bottom: 11px;" >
+                <input type="text" class="form-control" style="height: 30px; margin-bottom: 11px;">
             </div>
             <div class="col-3 "></div>
         </div>
@@ -176,8 +172,9 @@
                     <b> Password </b> <label for="" style="color: red;">*</label>
                 </label>
                 <input type="text" class="form-control" style="height: 30px; margin-bottom: 11px;">
-                <small id="emailHelp" class="form-text text-muted">Make sure it's <b style="color: rgb(189, 35, 35);"> at least 15 characters</b> OR  <b style="color:rgb(189, 35, 35);"> at least 8
-                    characters including a number and a lowercase letter.</b>
+                <small id="emailHelp" class="form-text text-muted">Make sure it's <b style="color: rgb(189, 35, 35);">
+                        at least 15 characters</b> OR <b style="color:rgb(189, 35, 35);"> at least 8
+                        characters including a number and a lowercase letter.</b>
                     <a href="#" style="color:blue;"> Learn more</a></small>
 
             </div>
@@ -188,9 +185,9 @@
         <div class="row" style="margin-top: 20px;">
             <div class="col-3"></div>
             <div class="col-6" style=" margin-bottom: 0em;"><label for="" style="margin-bottom: 5px; font-size: 15px">
-                <b> Email preferences</b>
-            </label>
-                </div>
+                    <b> Email preferences</b>
+                </label>
+            </div>
             <div class="col-3"></div>
         </div>
 
@@ -213,10 +210,12 @@
         <div class="row" style="margin-top: 30px;">
             <div class="col-3"></div>
             <div class="col-6" style=" margin-bottom: 0em;">
-                <button type="button" class="btn btn-primary btn-lg btn-block"><label for=""  style="font-size: 16px"> create account </label></button>
+                <button type="button" class="btn btn-primary btn-lg btn-block"><label for="" style="font-size: 16px">
+                        create account </label></button>
                 <small class="form-text text-muted" style="font-size: 12px;"> By creating an account, you agree to the
-                   <a href="" style="color: blue;"> Terms of Service.</a>
-                    For more information about GitHub's privacy practices, see the <a href="" style="color: blue;">GitHub Privacy Statement.</a>
+                    <a href="" style="color: blue;"> Terms of Service.</a>
+                    For more information about GitHub's privacy practices, see the <a href=""
+                        style="color: blue;">GitHub Privacy Statement.</a>
                     We'll occasionally send you account-related emails. </small>
             </div>
             <div class="col-3"></div>
